# sum-peak-analysis

./: .gitignore  CMakeLists.txt  CheckBGFactors.C  LICENSE  SumPeakAnalysis.h.in  bg_index_scaling.csv
include/: BGUtils.h  FileHandler.h  HistogramManager.h  LoadingMessenger.h  Notifier.h  csv.h  progress_bar.h
src/: BGUtils.cpp  FileHandler.cpp  HistogramManager.cpp  SumPeakAnalysis.cpp
